# ws-kalshi

./: Cargo.toml
brain/: ledger.md  prompt.md  stats.md
src/: main.rs  safety.rs  storage.rs
src/adapters/: binance.rs  binance_ws.rs  mod.rs  openrouter.rs
src/adapters/kalshi/: client.rs  mod.rs  types.rs  websocket.rs
src/core/: engine.rs  indicators.rs  mod.rs  position_manager.rs  risk.rs  types.rs
src/ports/: exchange.rs  mod.rs
