[package]
name = "kalshi-bot"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
signature = "2"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
dotenv = "0.15"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
http = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
